--- a/crudapp/templates/new.html
+++ b/crudapp/templates/new.html
@@ -3,23 +3,24 @@
 {% block content %}
 <style>
     body {
-        background-color: rgb(184, 182, 182);
+        background-color: rgb(176, 202, 151);
       }
     .mainbox {
-        background-color: white;
+        background-color: #ffffff;
+        border-radius: 50px;
         margin: auto;
         padding: 30px;
         width: 50%;
     }
     input {
-        background-color: lightgray;
+        background-color: rgb(239, 245, 185);
         border-style: none;
     }
 
 </style>
 
 <div class="mainbox">
-    <h2>일기쓰기</h2>
+    <h2>식물 추가하기</h2>
     <hr>
     <form method="POST" enctype="multipart/form-data">
         {%csrf_token%}
