--- a/crudapp/templates/search.html
+++ b/crudapp/templates/search.html
@@ -5,13 +5,14 @@
 
 <style>
     body {
-      background-color: rgb(184, 182, 182);
+      background-color: rgb(176, 202, 151);
     }
     .container2 {
       text-align: left;
       margin: 10px auto;
       padding: 20px;
       border-style: none;
+      border-radius: 10px;
       border-width: 2px;
       background-color: white;
       font-family: Arial, Helvetica, sans-serif;
