--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -44,14 +44,14 @@
     {% providers_media_js %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Diary</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Botanical Garden</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'new' %}">일기쓰기</a>
+                <a class="nav-link" href="{% url 'new' %}">식물추가하기</a>
               </li>
             </ul>
 
