--- a/chatting/templates/chat_send.html
+++ b/chatting/templates/chat_send.html
@@ -5,14 +5,14 @@
 
 <style>
 body {
-    background-color: rgb(176, 202, 151);  
+    background-color: rgba(232, 233, 231, 0.842);
 }
 
 .container2 {
     background-color: white;
     border-radius: 10px;
-    border-width: 2px;
-    box-shadow: 5px 5px 5px;
+    border-width: 3px;
+    border-style: solid;
     margin: auto;
     padding: 30px;
     width: 50%;
@@ -20,17 +20,17 @@ body {
 
 </style>
 
+<h4>💌 보낸 메세지 💌</h4>
+<br>
 {% for chat in chats.all %}
-
 <div class="container2"> 
     <div class="">
       <div class="">
-        <h2>{{ chat.title }}</h2>
+        <h4>{{ chat.title }}</h4>
         <hr>
         <p>{{ chat.pub_date | date:"Y년 m월 d일" }}</p>
         <p>{{chat.writer}}</p>
         <p>{{ chat.summary }}</p>
-        <br>
         <a href="{% url 'chat_detail' chat.id %}"> 자세히 보기</a>
       </div>
     </div>
