--- a/crudapp/templates/edit.html
+++ b/crudapp/templates/edit.html
@@ -3,8 +3,8 @@
 {% block content %}
 <style>
     body {
-        background-color:rgb(176, 202, 151);
-      }
+        background-color: rgba(232, 233, 231, 0.842);
+    }
     .mainbox {
         background-color: white;
         margin: auto;
