--- a/crudapp/templates/detail.html
+++ b/crudapp/templates/detail.html
@@ -1,50 +1,67 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block content %} 
 
-    <style>
-        body {
-            background-color: rgb(176, 202, 151);
-          }
-        .container2 {
-          text-align: left;
-          margin: 10px auto;
-          padding: 20px;
-          border-style: none;
-          border-radius: 10px;
-          border-width: 2px;
-          box-shadow: 5px 5px 5px;
-          background-color: white;
-          font-family: Arial, Helvetica, sans-serif;
-          width: 70%;
-          display: inline-block;
-        }
-        .container3 {
-            padding: 20px;
-        }
-        .img {
-            padding: 10px;
-            margin: auto;
-            text-align: center;
-        }
-    </style>
 
-    <div class="container2">
-        <h1>{{ blog.title }}</h1>
-        <hr>
-        <div class="img">
-            {% if blog.images %}
-                <img src="{{ blog.images.url }}">
-            {% endif %}
-        </div>
-        <div class="container3">
-            <p>{{ blog.pub_date | date:"Y년 m월 d일" }}</p>
-            <p>{{ blog.body }}</p> 
-        
-            <a href="{% url 'home' %}">돌아가기</a>
-            <br>
-            <a href="{% url 'edit' blog.id %}">수정하기</a>
-            <a href="{% url 'delete' blog.id %}">삭제하기</a>
-        </div>
+<style>
+    body {
+        background-color: rgba(232, 233, 231, 0.842);
+      }
+
+    .container2 {
+      text-align: left;
+      margin: 10px auto;
+      padding: 20px;
+      border-style: none;
+      border-radius: 10px;
+      border-width: 2px;
+      box-shadow: 5px 5px 5px;
+      background-color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      width: 70%;
+      display: inline-block;
+    }
+
+    .blog_body {
+        padding: 20px;
+    }
+
+    .hits_date {
+        float: left;
+        padding: 20px;
+    }
+
+    .img {
+        padding: 10px;
+        margin: auto;
+        float: left;
+    }
+
+    .edit_delete {
+        text-align: center;
+        text-decoration-line: none;
+        color: black;
+    }
+</style>
+
+<div class="container2">
+    <h4>{{ blog.title }}</h4>
+    <hr>
+    <div class="img">
+        {% if blog.images %}
+            <img width="250px" src="{{ blog.images.url }}">
+        {% endif %}
     </div>
+    <div class="blog_body">
+        <p>{{ blog.body }}</p>
+    </div>
+    <div class="hits_date">
+        <p>조회수 : {{ blog.hits }}</p>
+        <p>{{ blog.pub_date | date:"Y년 m월 d일" }}</p>
+        <a class="edit_delete" href="{% url 'edit' blog.id %}">수정하기</a>
+        &nbsp;	&nbsp;
+        <a class="edit_delete" href="{% url 'delete' blog.id %}">삭제하기</a>
+    </div>
+</div>
+
 {% endblock %}
