--- a/crudapp/templates/home.html
+++ b/crudapp/templates/home.html
@@ -2,27 +2,23 @@
 
 {% block content %}
 <style>
-body {
-}
 
 .container2 {
   text-align: left;
   margin: 10px;
-  padding: 20px;
   border-style: none;
-  border-radius: 10px;
-  border-width: 2px;
-  box-shadow: 5px 5px 5px;
-  background-color: rgb(176, 202, 151, 0.7);
+  border-color: grey;
+  border-width: 3px;
+  background-color: rgba(232, 233, 231, 0.842);
   font-family: Arial, Helvetica, sans-serif;
-  width: 30%;
+  width: 325px;
   display: inline-flex;
-  height: 93vh;
+  height: 70vh;
 }
 
 .img {
-  float: left;
   margin: 10px 30px 20px 10px;
+  padding-top: 0px;
 }
 
 .link {
@@ -30,13 +26,24 @@ body {
   color: black;
 }
 
+.book_body {
+  padding: 20px;
+  width: 320px;
+}
+
+.card-body {
+  padding: 0px;
+}
+
 
 </style>
 
+{% if user.is_authenticated %}
 <a class="link" href="{% url 'mail' %}">메일보내기</a> |
 <a class="link" href="{% url 'chat_received' %}">쪽지 보관함</a> |
 <a class="link" href="{% url 'chat_new' %}">쪽지 쓰기</a> |
 <a class="link" href="{% url 'chat_send' %}">보낸 메세지</a>
+{% endif %}
 
 <br>
 <br>
@@ -46,8 +53,6 @@ body {
 <span class="container2"> 
     <div class="cards">
       <div class="card-body">
-        <h1>{{ blog.title }}</h1>
-        <hr>
         <div class="img">
           {% if blog.images %}
             <img src="{{blog.image_thumbnail.url}}" width="300" height="200">
@@ -55,20 +60,18 @@ body {
             <img src="/static/cloud.jpg" alt="빈칸" width="300" height="200">
           {% endif %}
         </div>
-        <br>
-        <p>{{ blog.pub_date | date:"Y년 m월 d일" }}</p>
-        <p>{{blog.writer}}</p>
-        <p>{{ blog.summary }}</p>
-        <br>
-        <a href="{% url 'detail' blog.id %}"> 자세히 보기</a>
+        <div class="book_body">
+          <h4>{{ blog.title }}</h4>
+          <p>{{blog.writer}}</p>
+          <p>{{ blog.summary }}</p>
+          <p>{{ blog.pub_date | date:"Y년 m월 d일" }}</p>
+          <a href="{% url 'detail' blog.id %}">more...</a>
+        </div>
       </div>
     </div>
 </span>
 
 {% endfor %}
 
-<br>
-<br>
-<a href="{% url 'index' %}">채팅- channel 이용/구현중단.클릭하지마시오.</a>
 
 {% endblock %}
