--- a/crudapp/templates/mail.html
+++ b/crudapp/templates/mail.html
@@ -3,7 +3,7 @@
 {% block content %}
 <style>
     body {
-        background-color: rgb(176, 202, 151);
+        background-color: rgba(232, 233, 231, 0.842);
       }
     .mainbox {
         background-color: white;
@@ -12,7 +12,7 @@
         width: 50%;
     }
     input {
-        background-color: rgb(239, 245, 185);
+        background-color: rgba(232, 233, 231, 0.842);
         border-style: none;
     }
 
@@ -21,7 +21,7 @@
     <div class="mainbox">
         <form action="" method="POST" class="contact-form">
             {% csrf_token %}
-            <h3>메일쓰기</h3>
+            <h4>메일쓰기</h4>
             <hr>
             <div>
                 <div>Full Name</div>
