--- a/crudapp/templates/search.html
+++ b/crudapp/templates/search.html
@@ -5,7 +5,7 @@
 
 <style>
     body {
-      background-color: rgb(176, 202, 151);
+      background-color: rgba(232, 233, 231, 0.842);
     }
     .container2 {
       text-align: left;
