--- a/myproject/templates/base.html
+++ b/myproject/templates/base.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=pwq93bjpuy"></script>
+
     <style>
       .account {
         list-style:none;
@@ -36,6 +37,15 @@
         margin: 8px 20px;
       }
 
+      footer {
+        text-align: center;
+      }
+
+      #likelion_api {
+        text-decoration-line: none;
+        color: black;
+      }
+
     </style>
 </head>
 <body>
@@ -44,14 +54,19 @@
     {% providers_media_js %}
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">Botanical Garden</a>
+          <a class="navbar-brand" href="{% url 'home' %}">📖 BB: BOOK BLOG 📖</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+          <span>오직 책을 위한 블로그</span>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'new' %}">식물추가하기</a>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'new' %}">글쓰기</a>
+                {% else %}
+                <a class="nav-link" href="#" onclick="authPost()">글쓰기</a>
+                {%endif%}
               </li>
             </ul>
 
@@ -89,6 +104,21 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <footer>
+      <br>
+      <hr>
+      <br>
+      <strong>동덕여대 멋쟁이 사자처럼 9기</strong>
+      <br>
+      <a href="{% url 'api' %}" id="likelion_api"> 
+        멋쟁이 사자처럼 위치보기
+      </a>
+      <br>
+      개발자 <strong>전혜인</strong>
+    </footer>
+    <br>
+    <br>
     
 </body>
 </html>
